--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -138,8 +138,8 @@
             </div>
 
             <!-- Buttons -->
-            <div class="col-12 mt-3 d-flex flex-column gap-2">
-              <a href="{% url 'products' %}" class="btn btn-outline-navy">
+            <div class="col-12 mt-3 d-flex flex-column">
+              <a href="{% url 'products' %}" class="btn btn-outline-navy mb-2">
                 <i class="fas fa-chevron-left mr-1"></i> Keep Shopping
               </a>
               <button type="submit" class="btn btn-navy text-white text-uppercase">
