--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -10,7 +10,6 @@
 {% endblock %}
 
 {% block page_header %}
-<!-- Empty header for layout consistency -->
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
@@ -19,10 +18,8 @@
 {% endblock %}
 
 {% block content %}
-<!-- Background overlay -->
 <div class="overlay"></div>
 
-<!-- Main checkout content -->
 <div class="checkout-page-wrapper">
     <div class="container checkout-content">
         <div class="row">
@@ -34,7 +31,7 @@
         </div>
 
         <div class="row">
-            <!-- Right column: Order summary -->
+            <!-- Right: Order summary -->
             <div class="col-12 col-lg-6 order-lg-last mb-5">
                 <p class="text-muted">Order Summary ({{ product_count }})</p>
                 <div class="row">
@@ -49,7 +46,6 @@
                 {% for item in bag_items %}
                 <div class="row">
                     <div class="col-2 mb-1">
-                        <!-- Product image -->
                         <a href="{% url 'product_detail' item.product.id %}">
                             {% if item.product.image %}
                             <img class="w-100" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
@@ -59,13 +55,11 @@
                         </a>
                     </div>
                     <div class="col-7">
-                        <!-- Product details -->
                         <p class="my-0"><strong>{{ item.product.name }}</strong></p>
                         <p class="my-0 small">Size: {% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
                         <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
                     </div>
                     <div class="col-3 text-right">
-                        <!-- Product subtotal -->
                         <p class="my-0 small text-muted">£{{ item.product.price|floatformat:2 }}</p>
                     </div>
                 </div>
@@ -73,7 +67,6 @@
 
                 <hr class="my-0">
 
-                <!-- Total summary -->
                 <div class="row text-black text-right">
                     <div class="col-7 offset-2">
                         <p class="my-0">Order Total:</p>
@@ -88,13 +81,12 @@
                 </div>
             </div>
 
-            <!-- Left column: Checkout form -->
+            <!-- Left: Checkout form -->
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Please fill out the form below to complete your order</p>
                 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                     {% csrf_token %}
 
-                    <!-- Customer details -->
                     <fieldset class="rounded px-3 mb-5">
                         <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
                         {{ order_form.full_name|as_crispy_field }}
@@ -102,7 +94,6 @@
                         {{ order_form.phone_number|as_crispy_field }}
                     </fieldset>
 
-                    <!-- Delivery information -->
                     <fieldset class="rounded px-3 mb-5">
                         <legend class="fieldset-label small text-black px-2 w-auto">Delivery</legend>
                         {{ order_form.street_address1|as_crispy_field }}
@@ -124,7 +115,6 @@
                         </div>
                     </fieldset>
 
-                    <!-- Stripe payment section -->
                     <fieldset class="px-3">
                         <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
                         <div class="mb-3" id="card-element"></div>
@@ -132,19 +122,15 @@
                         <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>
 
-                    <!-- Form buttons -->
                     <div class="submit-button text-right mt-5 mb-2">                    
                         <a href="{% url 'view_bag' %}" class="btn btn-outline-navy rounded-0 mr-2">
-                            <span class="icon"><i class="fas fa-chevron-left"></i></span>
-                            <span class="font-weight-bold">Adjust Bag</span>
+                            Adjust Bag
                         </a>
                         <button id="submit-button" class="btn btn-navy rounded-0">
-                            <span class="font-weight-bold">Complete Order</span>
-                            <span class="icon"><i class="fas fa-lock"></i></span>
+                            Complete Order
                         </button>
                         <p class="small text-danger my-0">
-                            <span class="icon"><i class="fas fa-exclamation-circle"></i></span>
-                            <span>Your card will be charged <strong>£{{ grand_total|floatformat:2 }}</strong></span>
+                            Your card will be charged <strong>£{{ grand_total|floatformat:2 }}</strong>
                         </p>
                     </div>
                 </form>
@@ -153,7 +139,7 @@
     </div>
 </div>
 
-<!-- Loading overlay -->
+<!-- Loading overlay with spinning cog -->
 <div id="loading-overlay" class="loading-spinner justify-content-center align-items-center">
     <div class="text-center">
         <i class="fas fa-cog fa-spin fa-4x text-light mb-3"></i>
@@ -165,7 +151,7 @@
 
 {% block postloadjs %}
 {{ block.super }}
-<!-- Stripe payment script -->
+<!-- Stripe integration -->
 {{ stripe_public_key|json_script:"id_stripe_public_key" }}
 {{ client_secret|json_script:"id_client_secret" }}
 <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
