--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -55,7 +55,7 @@
     <a class="nav-link" href="{% url 'view_bag' %}">
       <div class="text-center">
         <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-        <p class="my-0 oswald-font {% if grand_total %}text-info font-weight-bold{% else %}text-light{% endif %}">
+        <p class="my-0 oswald-font {% if grand_total %} font-weight-bold{% else %}text-light{% endif %}">
           {% if grand_total %}
             £{{ grand_total|floatformat:2 }}
           {% else %}
